content: reflection and stacktrace JVM options
Feedback from Alex Miller